resolve some problems